@@ -19,7 +19,6 @@
 package org.apache.fineract.spm.util;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -50,10 +49,10 @@ public class LookupTableMapper {
                 lookupTableData.getEntries().add(new LookupTableEntry(lookupTable.getValueFrom(),
                         lookupTable.getValueTo(), lookupTable.getScore()));
             }
-            return new ArrayList<>(lookupTableDataMap.values());
+            return List.copyOf(lookupTableDataMap.values());
         }
 
-        return Collections.emptyList();
+        return List.of();
     }
 
     public static List<LookupTable> map(final LookupTableData lookupTableData, final Survey survey) {
